--- a/css/main.css
+++ b/css/main.css
@@ -25,8 +25,17 @@ body {
   background-position: bottom center;
   background-repeat: no-repeat;
   position: absolute;
-  left: 0;
-  transition: all 0.5s;
+  left: -200px;
+  transition: all 1s;
+}
+.car[data-model="car"] {
+  background-image: url("../img/car.png");
+}
+.car[data-model="sedanas"] {
+  background-image: url("../img/sedanas.png");
+}
+.car[data-model="tesla"] {
+  background-image: url("../img/tesla.png");
 }
 
 .car.car-1 {
@@ -55,6 +64,6 @@ body {
 }
 
 .line.finish {
-  left: 98%;
+  left: calc(100% - 10px);
   border-color: red;
 }
